# thai-python-translator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: advanced_thai.py  hello_thai.py
tests/: test_keywords.py  test_runtime.py  test_translator.py
translator/: __init__.py  cli.py  core.py  keywords.py  runtime.py
