[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thai-python-translator"
version = "0.1.0"
description = "A tool to write Python code using Thai syntax"
readme = "README.md"
authors = [
    { name = "Tobias Andraschko", email = "inquiries@ta-software-solutions.de" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["thai", "python", "translator", "education", "language"]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yourusername/thai-python-translator"
Repository = "https://github.com/yourusername/thai-python-translator"
Issues = "https://github.com/yourusername/thai-python-translator/issues"

[project.scripts]
thai-python = "translator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["translator"]

[tool.hatch.build.targets.sdist]
include = [
    "/translator",
    "/tests",
    "LICENSE",
    "README.md"
]